--- a/package.json
+++ b/package.json
@@ -5,6 +5,10 @@
         "build": "npx babel ./backend/index.jsx --out-file ./public/scripts/index.js && npx babel ./backend/components --watch --out-dir public/scripts/components",
         "start": "nodemon backend/app.js"
     },
+    "engines": {
+        "node": ">=14.0.0",
+        "npm": ">=6.0.0"
+    },
     "devDependencies": {
         "@babel/core": "^7.0.0",
         "@babel/cli": "^7.0.0",
@@ -24,8 +28,6 @@
         "express-handlebars": "^5.3.2",
         "hbs": "^4.1.2",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^5.13.3",
-        "react": "^17.0.2",
-        "react-dom": "^17.0.2"
+        "mongoose": "^5.13.3"
     }
 }
