--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
         "start": "nodemon backend/app.js"
     },
     "engines": {
-        "node": ">=14.0.0",
-        "npm": ">=6.0.0"
+        "node": "=14.17.0",
+        "npm": "=6.14.13"
     },
     "devDependencies": {
         "@babel/core": "^7.0.0",
