--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "express-handlebars": "^5.3.2",
         "hbs": "^4.1.2",
         "jsonwebtoken": "^8.5.1",
+        "mongodb": "latest",
         "mongoose": "^5.13.3"
     }
 }
