--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         ]
     },
     "dependencies": {
+        "dotenv": "latest",
         "@babel/plugin-syntax-dynamic-import": "^7.8.3",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.19.0",
